WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61991
Assertion fails in TextCheckingHelper by right-clicking on <input type=search>
https://bugs.webkit.org/show_bug.cgi?id=61991
Summary
Assertion fails in TextCheckingHelper by right-clicking on <input type=search>
Kent Tamura
Reported
2011-06-02 20:59:55 PDT
1. Open data:text/html,<input type=search> 2. Right-click on a place where a cancel button should be on. Result: ARGUMENT BAD: m_range, m_range /Volumes/d2/WebKit/Source/WebCore/editing/TextCheckingHelper.cpp(160) : WebCore::TextCheckingHelper::TextCheckingHelper(WebCore::EditorClient*, WTF::PassRefPtr<WebCore::Range>) 1 WebCore::TextCheckingHelper::TextCheckingHelper(WebCore::EditorClient*, WTF::PassRefPtr<WebCore::Range>) 2 WebCore::Editor::guessesForMisspelledOrUngrammaticalSelection(bool&, bool&) 3 WebCore::ContextMenuController::populate() 4 WebCore::ContextMenuController::handleContextMenuEvent(WebCore::Event*) 5 WebCore::Node::defaultEventHandler(WebCore::Event*) 6 WebCore::SearchFieldCancelButtonElement::defaultEventHandler(WebCore::Event*) 7 WebCore::EventDispatcher::dispatchEvent(WTF::PassRefPtr<WebCore::Event>) 8 WebCore::MouseEventDispatchMediator::dispatchEvent(WebCore::EventDispatcher*) const 9 WebCore::EventDispatcher::dispatchEvent(WebCore::Node*, WebCore::EventDispatchMediator const&) 10 WebCore::Node::dispatchMouseEvent(WebCore::PlatformMouseEvent const&, WTF::AtomicString const&, int, WebCore::Node*) 11 WebCore::EventHandler::dispatchMouseEvent(WTF::AtomicString const&, WebCore::Node*, bool, int, WebCore::PlatformMouseEvent const&, bool) 12 WebCore::EventHandler::sendContextMenuEvent(WebCore::PlatformMouseEvent const&) 13 -[WebHTMLView menuForEvent:] 14 -[NSView rightMouseDown:] Note: If the search field has a on-empty value and the cancel button is visible, this doesn't happen.
Attachments
Patch
(5.60 KB, patch)
2011-06-06 03:28 PDT
,
Hajime Morrita
tkent
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2011-06-06 03:28:37 PDT
Created
attachment 96073
[details]
Patch
Kent Tamura
Comment 2
2011-06-06 03:36:24 PDT
Comment on
attachment 96073
[details]
Patch Looks ok
Hajime Morrita
Comment 3
2011-06-06 18:44:45 PDT
Committed
r88211
: <
http://trac.webkit.org/changeset/88211
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug