2011-06-06  MORITA Hajime  <morrita@google.com>

Reviewed by Kent Tamura.

        Assertion fails in TextCheckingHelper by right-clicking on <input type=search>
        https://bugs.webkit.org/show_bug.cgi?id=61991

        * editing/spelling/spellcheck-input-search-crash-expected.txt: Added.
        * editing/spelling/spellcheck-input-search-crash.html: Added.
2011-06-06  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        Assertion fails in TextCheckingHelper by right-clicking on <input type=search>
        https://bugs.webkit.org/show_bug.cgi?id=61991

        Added a guard bofore TextCheckingHelper construction sites.

        Test: editing/spelling/spellcheck-input-search-crash.html

        * editing/Editor.cpp:
        (WebCore::Editor::isSelectionUngrammatical):
        (WebCore::Editor::guessesForUngrammaticalSelection):
        (WebCore::Editor::guessesForMisspelledOrUngrammaticalSelection):

git-svn-id: svn://svn.chromium.org/blink/trunk@88211 bbb929c8-8fbe-4397-9dbb-9b2b20218538